--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<section class="main">
 		<div class="left">
-			<h2 class="iphone"> lana iphone  15 pro max lena</h2>
+			<h2 class="iphone"> iphone  15 pro max lena</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			t, sed do eiusmod</p>
 			<button>All Products</button>
